  Ctrl+Y again, the previous line would also be killed. Now, the last line
  will only be cleared and the cursor will remain there. So that you cannot
  accidentally delete text above the line where you started to press Ctrl+Y.
  If you do not like the new behaviour, add "Switch Carthy Off" to the confi-
  guration file in order to revert to the old behaviour.


Features:

- The AKA matching alogrithm now also takes into account net and node number.
  So, if you have two AKAs, 2:1234/5 and 2:789/123, and you write a mail to
  a member of net 2:789 your 2:789/123 AKA will be used instead of your
  primary AKA.

- The "Gate" keyword has a new parameter "Ask". Instead of globally deciding
  if you want to zonegate all messages or none, with "Gate Ask" you can now
  individually select if you want to employ zone gating for each message.

- The new keyword "Areadesc" gives you full control on how Msged format the
  area descriptions in the area list based on the Areafile. You can specify
  if you want to see only area tags, or only area descriptions, or both, and
  if you want to uppercase, lowercase, or leave as is any of those strings.
  See the manual for more information.

- New Key "Alt+T" (function "selchs") introduced. It allows you to manually
  specify the charcter set to use for recoding a mail when reading it. You
  should only need this in rare occasions (like when trying to read Russian
  mails that do not have CHRS kludges in a Western setup). Normally, the
  AssumeCharset keywords should do all work for you.

- Added recoding tables for cyrillic codepages (KOI8-RU, CP866, CP1125,
  ISO 8859-5). Msged is now fully "cyrillified". Please read the manual,
  section "Special Characters", for information on how to set up Msged
  in a cyrillic environment.

- New keywords "readmap" and "writemap". You can use these to configure the
  location of the READMAPS.DAT style input recoding map and the WRITMAPS.DAT